[package]
name = "wormcord"
version = "0.1.0"
authors = ["Slimig <slimecheat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
serenity = { git = "https://github.com/r-o-b-o-t-o/serenity", branch = "current", default-features = false, features = ["builder", "client", "gateway", "model", "http", "rustls_backend"] }
ureq = "1.1.1"
dirs = "2.0"
regex = "1.3.9"